[gd_scene load_steps=2 format=3 uid="uid://ccukdb5nm1udx"]

[ext_resource type="Script" path="res://common/scenes/sound_button/sound_button.gd" id="1"]

[node name="OptionButton" type="OptionButton"]
offset_right = 41.0
offset_bottom = 20.0
script = ExtResource("1")

[connection signal="button_down" from="." to="." method="_cancel_sound"]
[connection signal="focus_exited" from="." to="." method="_select"]
[connection signal="item_focused" from="." to="." method="_select_with_arg"]
[connection signal="item_selected" from="." to="." method="_click_with_arg"]
[connection signal="pressed" from="." to="." method="_click"]
